add header to home page

--- a/app/views/pages/template.html.erb
+++ b/app/views/pages/template.html.erb
@@ -1,5 +1,5 @@
-<h3>Page title
-   <small>Subtitle</small>
+<h3>Homeslice
+   <small>Making Real Estate a Piece of Cake!</small>
 </h3>
 <div class="row">
    <div class="col-lg-12">
