--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta name="description" content="Bootstrap Admin App + Ruby on Rails">
-  <meta name="keywords" content="app, responsive, jquery, bootstrap, dashboard, admin">
+  <meta name="description" content="Real Estate Tasks Made Easy">
+  <meta name="keywords" content="app, real estate, tasks, to-do, agent">
   <title><%= @title || "Homeslice" %></title>
   <!-- =============== VENDOR STYLES ===============-->
   <%= stylesheet_link_tag 'base' %>
