--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,8 @@
+<div class="wrapper">
+  <!-- top navbar-->
+  <header class="topnavbar-wrapper">
+    <%= render partial: "layouts/partials/topnavbar" %>
+  </header>
 <% title("Home Page") %>
 <h1><i class="fa fa-home"></i> Home Page <small>views/pages/home.html.erb</small></h1>
+ </div>
