--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,9 +2,9 @@
   <div class="col-sm-6">
     <h1>Sign up</h1>
 
-    <%= form_for(resource, :as => resource_name,
+    <%= simple_form_for(resource, :as => resource_name,
     :url => registration_path(resource_name),
-    :html => { :role => "form" }) do |f| %>
+    :html => { :role => "form", :class => "form-horizontal" }) do |f| %>
 
     <%= devise_error_messages! %>
 
