update simple_form initializer files to include additional components. edit registrations view

--- a/app/views/pages/register.html.erb
+++ b/app/views/pages/register.html.erb
@@ -7,34 +7,41 @@
          </a>
       </div>
       <div class="panel-body">
-         <p class="text-center pv">SIGNUP TO GET INSTANT ACCESS.</p>
-         <form role="form" data-parsley-validate="" novalidate="" class="mb-lg">
+         <p class="text-center pv">SIGNUP TODAY!</p>
+        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), class:"mb-lg") do |f| %>
+
+      <!--<form role="form" data-parsley-validate="" novalidate="" class="mb-lg">-->
             <div class="form-group has-feedback">
-               <label for="signupInputEmail1" class="text-muted">Email address</label>
-               <input id="signupInputEmail1" type="email" placeholder="Enter email" autocomplete="off" required="required" class="form-control" />
-               <span class="fa fa-envelope form-control-feedback text-muted"></span>
+              <%= f.input :first_name, autofocus: true %>
             </div>
             <div class="form-group has-feedback">
-               <label for="signupInputPassword1" class="text-muted">Password</label>
-               <input id="signupInputPassword1" type="password" placeholder="Password" autocomplete="off" required="required" class="form-control" />
-               <span class="fa fa-lock form-control-feedback text-muted"></span>
+              <%= f.input :last_name, required: true, autofocus: true %>
             </div>
             <div class="form-group has-feedback">
-               <label for="signupInputRePassword1" class="text-muted">Retype Password</label>
-               <input id="signupInputRePassword1" type="password" placeholder="Retype Password" autocomplete="off" required="required" data-parsley-equalto="#signupInputPassword1" class="form-control" />
-               <span class="fa fa-lock form-control-feedback text-muted"></span>
+              <%= f.input :email, placeholder: "Enter email", autocomplete:"off", required:"required",input_html: {class: "form-control"}, label_html:{class: "text-muted"}  %>
+               <!--<span class="fa fa-envelope form-control-feedback text-muted"></span>-->
+            </div>
+            <div class="form-group has-feedback">
+              <%= f.input :password, placeholder: "Password",autocomplete:"off", required:"required", input_html: {class: "form-control"}, label_html:{class: "text-muted"}, hint: ("#{@minimum_password_length} characters minimum" if @validatable)  %>
+               <!--<span class="fa fa-lock form-control-feedback text-muted"></span>-->
+            </div>
+            <div class="form-group has-feedback">
+              <%= f.input :password_confirmation, placeholder: "Retype Password",autocomplete:"off", required:"required", input_html: {class: "form-control"}, label_html:{class: "text-muted"}  %>
+               <!--<span class="fa fa-lock form-control-feedback text-muted"></span>-->
             </div>
             <div class="clearfix">
                <div class="checkbox c-checkbox pull-left mt0">
-                  <label>
-                     <input type="checkbox" value="" required="required" name="agreed" />
-                     <span class="fa fa-check"></span>I agree with the <a href="#">terms</a>
-                  </label>
+                 <%= f.input_field :agreed, as: :boolean %>
+                     <!--<input type="checkbox" value="" required="required" name="agreed" />-->
+                     I agree with the <%= link_to "Terms", pages_terms_path %>
                </div>
             </div>
-            <button type="submit" class="btn btn-block btn-primary mt-lg">Create account</button>
-         </form>
-         <p class="pt-lg text-center">Have an account?</p><a href="/pages/login" class="btn btn-block btn-default">Signup</a>
+            <div class="form-actions">
+              <%= f.button :submit, "Sign up", class:"btn btn-block btn-primary mt-lg"  %>
+            </div>
+         <!--</form>-->
+         <p class="pt-lg text-center">Have an account?</p><%= link_to "Login", new_user_session_path, class:"btn btn-block btn-default" %>
+            <% end %>
       </div>
    </div>
    <!-- END panel-->
