--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <!-- top navbar-->
   <header class="topnavbar-wrapper">
-    <%= render partial: "layouts/partials/topnavbar" %>
+    <%= render partial: "layouts/navigation" %>
   </header>
 <% title("Home Page") %>
 <h1><i class="fa fa-home"></i> Home Page <small>views/pages/home.html.erb</small></h1>
