add rolify and cancancan gems.

--- a/app/views/layouts/partials/_topnavbar.html.erb
+++ b/app/views/layouts/partials/_topnavbar.html.erb
@@ -4,10 +4,10 @@
    <div class="navbar-header">
       <a href="#/" class="navbar-brand">
          <div class="brand-logo">
-            <img src="<%= image_path('angle/logo.png') %>" alt="App Logo" class="img-responsive" />
+            <%= image_path('angle/logo.png', class:"image-responsive", alt:"App Logo") %>
          </div>
          <div class="brand-logo-collapsed">
-            <img src="<%= image_path('angle/logo-single.png') %>" alt="App Logo" class="img-responsive" />
+           <%= image_path('angle/logo.png', class:"image-responsive", alt:"App Logo") %>
          </div>
       </a>
    </div>
