--- a/app/views/pages/sign_up.html.erb
+++ b/app/views/pages/sign_up.html.erb
@@ -1,9 +1,9 @@
 <div id="page-content">
   <div class="col-xs-4 text-right">
-<%= link_to "Sign up as an Agent", new_agent_registration_path,:class => 'btn btn-effect-ripple btn-lg btn-primary' %> <br>
+<%= link_to "Sign up as an Agent", new_user_registration_path(:role => 'agent'),:class => 'btn btn-effect-ripple btn-lg btn-primary' %> <br>
     </div>
   <div class="col-xs-4 text-right">
-<%= link_to "Sign up as a Client", new_user_registration_path, :class => 'btn btn-effect-ripple btn-lg btn-primary' %>
+<%= link_to "Sign up as a Client", new_user_registration_path(:role => 'client'), :class => 'btn btn-effect-ripple btn-lg btn-primary' %>
     </div>
 </div>
 
