--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,3 +11,38 @@
  */
 //@import "railsbricks_custom";
 @import "bourbon";
+@import "variables";
+@import "icons_social";
+@import "auth";
+@import "avatar";
+@import "cards";
+@import "footer";
+@import "hacks";
+
+// Plugins
+@import 'nprogress';
+@import 'nprogress-bootstrap';
+
+
+//
+// Minor Tweaks
+//
+
+// Padding to clear fixed nav
+body {
+  padding-top: 70px;
+}
+
+// Make sure alerts are nicely formatted
+.alert {
+  a {
+    white-space: nowrap;
+  }
+}
+
+// Postion loading spinner at bottom right
+#nprogress .spinner {
+  bottom: 15px;
+  top: auto;
+}
+
